--- a/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
@@ -32,3 +32,59 @@
       type: long
       description: |-
         When the response contains the HTTP Content-Range header, this field contains the range end value.
+    - name: cache_behavior.path_pattern
+      type: keyword
+      description: |-
+        The path pattern that identifies the cache behavior that matched the viewer request.
+    - name: client.ip.version
+      type: keyword
+      description: |-
+        The IP version of the request (IPv4 or IPv6).
+    - name: client.country
+      type: keyword
+      description: |-
+        A country code that represents the viewer's geographic location, as determined by the viewer's IP address.
+        For a list of country codes, see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2
+    - name: cs_header_names
+      type: keyword
+      description: |-
+        The names of the HTTP headers (not values) in the viewer request. Note: This field is truncated to 800 bytes.
+    - name: cs_headers_count
+      type: integer
+      description: |-
+        The number of HTTP headers in the viewer request.
+- name: aws.firehose
+  type: group
+  fields:
+    - name: arn
+      type: keyword
+      description: |
+        Firehose ARN.
+    - name: request_id
+      type: keyword
+      description: |
+        Firehose request ID.
+    - name: subscription_filters
+      type: keyword
+      description: |
+        Firehose request ID.
+    - name: parameters.*
+      type: flattened
+      description: |
+        Key-value pairs users set up when creating the Kinesis Data Firehose. These parameters are included in each HTTP call.
+- name: aws.kinesis
+  type: group
+  fields:
+    - name: name
+      type: keyword
+      description: |
+        Kinesis name.
+    - name: type
+      type: keyword
+      description: |-
+        Kinesis type.
+- name: http.request.headers.*
+  type: keyword
+  description: Not yet but already in use ecs fields
+- name: http.response.headers.*
+  type: keyword
