--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.6.2"
+  changes:
+    - description: Added cloudfront realtime logs support
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/20
 - version: "0.5.1"
   changes:
     - description: Added refactored parser to ppbgdi.cloudfront_logs
