--- a/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/default.yml
@@ -448,7 +448,7 @@ processors:
   # c_ip_version
   - rename:
       field: _tmp.c_ip_version
-      target_field: aws.cloudfront.client.ip.version
+      target_field: network.type
       ignore_missing: true
   # c_country
   - rename:
@@ -519,6 +519,11 @@ processors:
       ignore_missing: true
   - remove:
       field: _tmp.cs_headers_count
+      ignore_missing: true
+  # asn
+  - rename:
+      field: _tmp.asn
+      target_field: aws.cloudfront.asn
       ignore_missing: true
 
 
@@ -658,10 +663,13 @@ processors:
 
 
 ### Cleanup ########################################################################################
-#   - remove:
-#       field: _tmp
-#       ignore_missing: true
+  - remove:
+      field: _tmp
+      ignore_missing: true
 
+
+
+### Error handling #################################################################################
 on_failure:
   - set:
       field: event.kind
