--- a/packages/ppbgdi/data_stream/kubernetes_scheduler_logs/fields/fields.yml
+++ b/packages/ppbgdi/data_stream/kubernetes_scheduler_logs/fields/fields.yml
@@ -1,56 +1,26 @@
-- name: kubernetes.object.type
-  type: keyword
-  description: The type of the kubernetes object
-- name: kubernetes.event
+- name: kubernetes
   type: group
-  description: Kubernetes event fields
   fields:
-    - name: reporting_controller
+    - name: pod.name
       type: keyword
-      description: The reporting controller of the event
-    - name: type
+      description: >
+        Kubernetes pod name.
+    - name: node.name
       type: keyword
-      description: The type of the kubernetes event
-- name: kubernetes.event.deprecated
+      description: >
+        Kubernetes node name.
+    - name: error.message
+      type: keyword
+      description:
+        Kubernetes error message (move to error message as soon as elastic-package test is fixed)
+- name: kubernetes.scheduler
   type: group
-  description: Deprecated kubernetes api fields, used for backwards compatibility with older api version
   fields:
-    - name: count
-      type: integer
-      description: Deprecated field assuring backward compatibility with core.v1 Event type
-    - name: source
-      type: flattened
-      description: Deprecated event source
-    - name: timestamp.first
-      type: date
-      description: Deprecated field assuring backward compatibility with core.v1 Event type
-    - name: timestamp.last
-      type: date
-      description: Deprecated field assuring backward compatibility with core.v1 Event type
-- name: kubernetes.event.metadata
-  type: group
-  description: Kubernetes event metadata
-  fields:
-    - name: managed_fields
-      type: object
-      object_type: keyword
-      description: Managed-fields object
-    - name: namespace
-      type: keyword
-      description: The namespace of the event
-    - name: uid
-      type: keyword
-      description: The uid of the resource
-    - name: resource.version
-      type: keyword
-      description: The version of the resource
-- name: kubernetes.event.regarding
-  type: group
-  description: Kubernetes event regarding fields
-  fields:
-    - name: version
-      type: keyword
-      description: The version of the regarding resource
-    - name: uid
-      type: keyword
-      description: The uid of the regarding resource
+    - name: feasible_nodes
+      type: long
+      description: >
+        Number of feasible nodes.
+    - name: evaluated_nodes
+      type: long
+      description: >
+        Number of evaluated nodes.
