--- a/packages/ppbgdi/data_stream/kubernetes_scheduler_logs/fields/fields.yml
+++ b/packages/ppbgdi/data_stream/kubernetes_scheduler_logs/fields/fields.yml
@@ -5,14 +5,15 @@
       type: keyword
       description: >
         Kubernetes pod name.
+
     - name: node.name
       type: keyword
       description: >
         Kubernetes node name.
+
     - name: error.message
       type: keyword
-      description:
-        Kubernetes error message (move to error message as soon as elastic-package test is fixed)
+      description: Kubernetes error message (move to error message as soon as elastic-package test is fixed)
 - name: kubernetes.scheduler
   type: group
   fields:
@@ -20,7 +21,9 @@
       type: long
       description: >
         Number of feasible nodes.
+
     - name: evaluated_nodes
       type: long
       description: >
         Number of evaluated nodes.
+
