PB-968: Added service-proxy routing rule

--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -42,6 +42,11 @@
       namespace:
         - "{{data_stream.namespace}}"
         - default
+    - target_dataset: ppbgdi.service_proxy_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-proxy'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
     - target_dataset: ppbgdi.service_search_logs
       if: ctx?.service?.name != null && ctx?.service?.name == 'service-search'
       namespace:
