--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.9.0"
+  changes:
+    - description: Fixed kubernetes apiserver log routing
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/25
 - version: "0.8.1"
   changes:
     - description: Fixed kubernetes apiserver log routing
