PB-1152: Support preparsed ecs realtime logs
Realtime logs are now ecs pre-parsed by firehose lambda function.
This saves performance and improves testability.

--- a/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
@@ -45,7 +45,7 @@
       type: keyword
       description: |-
         The names of the HTTP headers (not values) in the viewer request. Note: This field is truncated to 800 bytes.
-    - name: cs_headers_count
+    - name: cs_header_count
       type: integer
       description: |-
         The number of HTTP headers in the viewer request.
@@ -79,8 +79,7 @@
       type: keyword
       description: |-
         Kinesis type.
-- name: http.request.headers.*
+- name: http.request.header.*
   type: keyword
   description: Not yet but already in use ecs fields
-- name: http.response.headers.*
-  type: keyword
+
