PB-1152: Review changes

--- a/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/default.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/default.yml
@@ -47,7 +47,7 @@ processors:
       description: Process cloudfront standard logs
       if: ctx.first_char != '{'
       name: '{{ IngestPipeline "pipeline_standard_logs" }}'
-      tag: pipeline_realtime_logs
+      tag: pipeline_standard_logs
       ignore_missing_pipeline: false
   - remove:
       field:
