--- a/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/fields/fields.yml
@@ -81,5 +81,5 @@
         Kinesis type.
 - name: http.request.header.*
   type: keyword
-  description: Not yet but already in use ecs fields
+  description: "No ecs field yet but defined in OTEL: https://opentelemetry.io/docs/specs/semconv/attributes-registry/http/#http-request-header"
 
