Documented dashboard export and package deploy

--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "0.9.2"
+  changes:
+    - description: Updated ppbgdi cloudfront logs dashboard
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/30
 - version: "0.9.1"
   changes:
     - description: Fixed python log error parsing
