--- a/packages/ppbgdi/secrets.yml
+++ b/packages/ppbgdi/secrets.yml
@@ -1,5 +1,11 @@
 # ENV variables used by elastic-package utility
-ELASTIC_PACKAGE_ELASTICSEARCH_HOST: !var /elastic-stack/dev/bgdi-observability/elasticsearch/url --profile swisstopo-bgdi-observability
-ELASTIC_PACKAGE_ELASTICSEARCH_USERNAME: !var /elastic-stack/dev/bgdi-observability/elasticsearch/users/elastic-package/username --profile swisstopo-bgdi-observability
-ELASTIC_PACKAGE_ELASTICSEARCH_PASSWORD: !var /elastic-stack/dev/bgdi-observability/elasticsearch/users/elastic-package/password --profile swisstopo-bgdi-observability
-ELASTIC_PACKAGE_KIBANA_HOST: !var /elastic-stack/dev/bgdi-observability/kibana/url --profile swisstopo-bgdi-observability
+bgdi-observability-dev:
+  ELASTIC_PACKAGE_ELASTICSEARCH_HOST: !var /elastic-stack/dev/bgdi-observability/elasticsearch/url --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_ELASTICSEARCH_USERNAME: !var /elastic-stack/dev/bgdi-observability/elasticsearch/users/elastic-package/username --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_ELASTICSEARCH_PASSWORD: !var /elastic-stack/dev/bgdi-observability/elasticsearch/users/elastic-package/password --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_KIBANA_HOST: !var /elastic-stack/dev/bgdi-observability/kibana/url --profile swisstopo-bgdi-observability
+bgdi-observability-prod:
+  ELASTIC_PACKAGE_ELASTICSEARCH_HOST: !var /elastic-stack/prod/bgdi-observability/elasticsearch/url --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_ELASTICSEARCH_USERNAME: !var /elastic-stack/prod/bgdi-observability/elasticsearch/users/elastic-package/username --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_ELASTICSEARCH_PASSWORD: !var /elastic-stack/prod/bgdi-observability/elasticsearch/users/elastic-package/password --profile swisstopo-bgdi-observability
+  ELASTIC_PACKAGE_KIBANA_HOST: !var /elastic-stack/prod/bgdi-observability/kibana/url --profile swisstopo-bgdi-observability
