PB-1152: Enhanced cloudfront logs parsing

--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "1.0.0"
+  changes:
+    - description: Enhance cloudfront realtime log parsing
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/31
 - version: "0.9.2"
   changes:
     - description: Updated ppbgdi cloudfront logs dashboard
