--- a/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/pipeline_standard_logs.yml
+++ b/packages/ppbgdi/data_stream/cloudfront_logs/elasticsearch/ingest_pipeline/pipeline_standard_logs.yml
@@ -5,6 +5,21 @@ processors:
   - drop:
       if: ctx.event?.original?.startsWith('#')
       description: "Drop if logline contains header(s), which startswith `#`"
+  - set:
+      field: ecs.version
+      value: '8.11.0'
+  - set:
+      field: event.kind
+      value: event
+  - set:
+      field: event.category
+      value: ["web"]
+  - append:
+      field: event.type
+      value: ["access"]
+  - set:
+      field: cloud.provider
+      value: aws
   - csv:
       description: Parse cloudfront csv row
       field: event.original
@@ -321,6 +336,45 @@ processors:
 
 
 ### Additional fields ##############################################################################
+
+  # url
+  - script:
+      lang: painless
+      description: This script builds the `url.full` field out of the available `url.*` parts.
+      source: |
+        def full = "";
+        if(ctx.network?.protocol != null && ctx.network?.protocol != "") {
+            full += ctx.network.protocol+"://";
+        }
+        if(ctx.destination?.domain != null && ctx.destination?.domain != "") {
+            full += ctx.destination.domain;
+        }
+        if(ctx.url?.path != null && ctx.url?.path != "") {
+            full += ctx.url.path;
+        }
+        if(ctx.url?.query != null && ctx.url?.query != "") {
+            full += "?"+ctx.url.query;
+        }
+        if (ctx._tmp == null) {
+          ctx._tmp = new HashMap();
+        }
+        if(full != "") {
+            ctx._tmp.url_full = full
+        }
+  - uri_parts:
+      field: _tmp.url_full
+      target_field: url
+      keep_original: false
+      ignore_missing: true
+  - rename:
+      field: _tmp.url_full
+      target_field: url.full
+      ignore_missing: true
+  - registered_domain:
+      field: url.domain
+      target_field: url
+      ignore_missing: true
+
   # Network type
   - set:
       field: network.type
