PB-1351 Add service-control data stream

--- a/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
+++ b/packages/ppbgdi/data_stream/python_logs/routing_rules.yml
@@ -72,3 +72,8 @@
       namespace:
         - "{{data_stream.namespace}}"
         - default
+    - target_dataset: ppbgdi.service_control_logs
+      if: ctx?.service?.name != null && ctx?.service?.name == 'service-control'
+      namespace:
+        - "{{data_stream.namespace}}"
+        - default
