--- a/packages/ppbgdi/changelog.yml
+++ b/packages/ppbgdi/changelog.yml
@@ -1,4 +1,9 @@
 # newer versions go on top
+- version: "1.0.1"
+  changes:
+    - description: Add service control log parsing
+      type: enhancement
+      link: https://github.com/geoadmin/infra-elastic-integrations/pull/32
 - version: "1.0.0"
   changes:
     - description: Enhance cloudfront realtime log parsing
