PB-1351 Extend python_logs to handle service_control logs
Service-Control logs don't use our logging facility but the ecs logging
package instead
(https://www.elastic.co/guide/en/ecs-logging/python/master/installation.html)

Thus the logging is formatted slightly different than before, needing
some of these changes

--- a/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
+++ b/packages/ppbgdi/data_stream/python_logs/elasticsearch/ingest_pipeline/common-json.yml
@@ -8,6 +8,29 @@ processors:
   - json:
       field: event.original
       target_field: temp
+  - dot_expander:
+      path: temp
+      field: "*"
+      ignore_failure: true
+      description: expand the fields with dots sent by ecs logging
+  - set:
+      field: ecs.version
+      copy_from: temp.ecs.version
+      override: true
+      if: 'ctx?.temp?.ecs != null'
+      description: retrieve the ecs.version if it's set in the log record
+  - remove:
+      field: temp.ecs
+      ignore_missing: true
+  - date:
+      field: temp.@timestamp
+      formats:
+        - ISO8601
+      if: 'ctx?.temp["@timestamp"] != null'
+      description: ecs logging package sets @timestamp, thus we need to parse it here
+  - remove:
+      field: temp.@timestamp
+      ignore_missing: true
   - foreach:
       field: temp.error
       ignore_missing: true
@@ -31,6 +54,12 @@ processors:
   - set:
       field: "@timestamp"
       copy_from: event.created
+      ignore_empty_value: true
+  - set:
+      field: "event.created"
+      copy_from: "@timestamp"
+      if: 'ctx?.event?.created == null'
+      description: ecs logging package doesn't set event.created
   - convert:
       field: event.severity
       type: integer
